[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctk-color-picker"
version = "0.1.0"
description = "Photoshop-style color picker for CustomTkinter — sat/val square, HSL lightness slider, hue slider, hex input, tint strip, and persistent saved colors"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kandelucky" }]
keywords = ["customtkinter", "tkinter", "color-picker", "gui", "photoshop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]
dependencies = [
    "customtkinter>=5.2.2",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/kandelucky/ctk-color-picker"
Repository = "https://github.com/kandelucky/ctk-color-picker"
Issues = "https://github.com/kandelucky/ctk-color-picker/issues"

[tool.setuptools.packages.find]
include = ["ctk_color_picker*"]
